--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "phpunit/phpunit": "~5.7"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/MailFunctions.php"
+        ],
         "classmap": [
             "database"
         ],
